tests/harness/errors/104_comparison_type_mismatch_lte.eu
# Error: comparing incompatible types with <=
result: :foo <= 42
